# Pratica_mqtt

./: CMakeLists.txt  README.md  sdkconfig.old
main/: CMakeLists.txt  mqtt_led.c
main/certs/: certificate.pem.crt  private.pem.key  public.pem.key
